--- a/starship.toml
+++ b/starship.toml
@@ -3,14 +3,15 @@
 command_timeout = 1500
 
 format = """
-[](fg:color_bg1)\
+[](fg:color_blue)\
 $os\
 $username\
 $hostname\
-[ ](fg:color_bg1 bg:color_bg2)\
+[ ](fg:color_blue bg:color_blue)\
 $directory\
-[ ](fg:color_bg2 bg:color_bg3)\
+[ ](fg:color_blue bg:color_bg3)\
 $git_branch\
+[ ](fg:color_bg3 bg:color_bg3)\
 $git_status\
 [ ](fg:color_bg3 bg:color_bg4)\
 $c\
@@ -27,16 +28,18 @@ $cmd_duration\
 palette = "ccswe_dark"
 
 [palettes.ccswe_dark]
-color_bg1 = "#336699"
-color_bg2 = "#2f5783"
-color_bg3 = "#294262"
-color_bg4 = "#232f44"
-color_bg5 = "#1d2230"
+color_bg1 = "#e6e9ef"
+color_bg2 = "#c6d0f5"
+color_bg3 = "#acb0be"
+color_bg4 = "#bcc0cc"
+color_bg5 = "#ccd0da"
 
-color_blue = "#769ff0"
-color_gray = "#999999"
-color_red = "#eb4d28"
-color_white = "#f2f2f2"
+color_blue = "#2f5783"
+color_gray = "#6c6f85"
+color_black = "#000"
+color_red = "#e64553"
+color_gray2 = "#5c5f77"
+color_white = "#e6e9ef"
 
 [character]
 error_symbol = "[❯](bold color_red)"
@@ -47,10 +50,10 @@ format = "[$duration](bg:color_bg5 fg:color_gray)"
 min_time = 500
 
 [directory]
-style = "bg:color_bg2 fg:color_white"
+style = "bg:color_blue fg:color_white"
 format = "[$path]($style)"
 truncation_length = 3
-truncation_symbol = "…/"
+truncation_symbol = "../"
 
 [directory.substitutions]
 "Documents" = "󰈙 "
@@ -75,11 +78,11 @@ style = "bold bg:color_bg3 fg:color_red"
 format = "[@$hostname]($style)"
 ssh_only = true
 ssh_symbol = " "
-style = "bg:color_bg1 fg:color_white"
+style = "bg:color_bg1 fg:color_gray2"
 
 [os]
 format = "[$symbol]($style)"
-style = "bg:color_bg1 fg:color_white"
+style = "bg:color_blue fg:color_white"
 disabled = false
 
 [username]
@@ -87,7 +90,7 @@ disabled = false
 format = "[$user]($style)"
 show_always = false
 style_root = "bg:color_bg1 fg:color_red"
-style_user = "bg:color_bg1 fg:color_white"
+style_user = "bg:color_bg1 fg:color_gray2"
 
 # Code symbols
 [c]
@@ -111,7 +114,7 @@ style = "bg:color_bg4 fg:#C017E4"
 symbol = " "
 
 [nodejs]
-style = "bg:color_bg4 fg:#5FA04E"
+style = "bg:color_bg4 fg:#40a02b"
 format = '[$symbol($version)]($style)'
 symbol = " "
 
